--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -12,7 +12,6 @@
 }
 
 nav {
-  max-width: 100vw;
   transition: all 0.75s ease-out;
   border-bottom: 1px solid rgba(55, 103, 58, 0.05);
 }
